// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailWidget renders a inline widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="sc-gKckTs izRacH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 cPuPbk"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 dLeNOM"
      >
        <span
          class="StyledText-sc-1sadyjn-0 iFfteu sc-eBhqvX bhxkhB"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 jjUbKU"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cORcyl"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailWidget renders a simple widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="sc-gKckTs izRacH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 cPuPbk"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 kYALZS"
      >
        <span
          class="StyledText-sc-1sadyjn-0 iFfteu sc-eBhqvX bhxkhB"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 jjUbKU"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cORcyl"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;
